<resources>
    <string name="app_name">My Date Time Picker</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="str_custom">Custom</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_done">Done</string>
    <string name="str_from_date">From date</string>
    <string name="str_to_date">To date</string>

    <string name="error_select_valid_range_date_time">Please select valid range of date-time.</string>
    <string name="error_select_valid_date_time">Please select valid date-time.</string>
    <string name="error_selection_range_validation">Date range should be max 31 days.</string>
    <string name="str_reset">Reset</string>
    <string name="str_filter">Filter: </string>
    <string name="str_filter_apply">Filter Apply</string>
</resources>