<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSheetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/str_custom"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/str_cancel"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/str_reset"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/txtDone"
        app:layout_constraintTop_toTopOf="@id/txtDone"
        app:layout_constraintBottom_toBottomOf="@id/txtDone"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/str_done"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:alpha="0.5"
        android:visibility="gone"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/txtSheetTitle"
        app:layout_constraintBottom_toTopOf="@id/txtFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/str_filter"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edtYear"
        app:layout_constraintBottom_toBottomOf="@id/edtYear"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtYear"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@null"
        android:hint="Year"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/viewDivider"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toStartOf="@id/txtFilterApply"
        app:layout_constraintStart_toEndOf="@id/txtFilter"
        android:layout_marginHorizontal="16dp"
        android:inputType="number"
        android:imeOptions="actionGo"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFilterApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/str_filter_apply"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edtYear"
        app:layout_constraintBottom_toBottomOf="@id/edtYear"
        app:layout_constraintTop_toTopOf="@id/edtYear" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFromDateLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/str_from_date"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFilter" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conFromPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFromDateLabel">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDateListView"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toStartOf="@+id/rvFromHour"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFromHour"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/rvFromMinute"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rvDateListView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFromMinute"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/rvFromMeridian"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rvFromHour"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFromMeridian"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/rvFromMinute"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewCenter"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:alpha=".3"
            android:background="@color/black"
            android:clickable="false"
            android:focusable="false"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/rvDateListView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rvDateListView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtToDateLabel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/str_to_date"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conFromPicker" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conToPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtToDateLabel">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvToDateListView"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toStartOf="@+id/rvToHour"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvToHour"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/rvToMinute"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rvToDateListView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvToMinute"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/rvToMeridian"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rvToHour"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvToMeridian"
            android:layout_width="0dp"
            android:layout_height="190dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/rvToMinute"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewToCenter"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:alpha=".3"
            android:background="@color/black"
            android:clickable="false"
            android:focusable="false"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/rvToDateListView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rvToDateListView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>