<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="18dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSheetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/str_custom"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/str_cancel"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/str_done"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtFromDateLabel"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/black"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/str_from_date"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSheetTitle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conFromPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtFromDateLabel">
                
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFromDate"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toStartOf="@+id/rvFromHour"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFromHour"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginTop="8dp"
                    android:overScrollMode="never"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintEnd_toStartOf="@+id/rvFromMinute"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rvFromDate"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFromMinute"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginTop="8dp"
                    android:overScrollMode="never"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintEnd_toStartOf="@+id/rvFromMeridian"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rvFromHour"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFromMeridian"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/rvFromMinute"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/viewCenter"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:alpha=".3"
                    android:background="@color/black"
                    android:clickable="false"
                    android:focusable="false"
                    app:layout_constraintBottom_toBottomOf="@+id/rvFromDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rvFromDate" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtToDateLabel"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:background="@color/black"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:text="@string/str_to_date"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conFromPicker" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conToPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtToDateLabel">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvToDate"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toStartOf="@+id/rvToHour"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvToHour"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginTop="8dp"
                    android:overScrollMode="never"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintEnd_toStartOf="@+id/rvToMinute"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rvToDate"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvToMinute"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginTop="8dp"
                    android:overScrollMode="never"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintEnd_toStartOf="@+id/rvToMeridian"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rvToHour"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvToMeridian"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/rvToMinute"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/viewCenterTo"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:alpha=".3"
                    android:background="@color/black"
                    android:clickable="false"
                    android:focusable="false"
                    app:layout_constraintBottom_toBottomOf="@+id/rvToDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rvToDate" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>